[gd_scene load_steps=5 format=3 uid="uid://ckfkoclivdl6b"]

[ext_resource type="Script" uid="uid://yi6swm0thjm7" path="res://levels/menus/level_select/level_select.gd" id="1_j0g6b"]
[ext_resource type="Texture2D" uid="uid://cdjjomguti4jv" path="res://assets/textures/back-icon.png" id="2_rfsf6"]
[ext_resource type="PackedScene" uid="uid://dpxxvou3uyr11" path="res://levels/menus/level_select/level_picker.tscn" id="2_u4u3e"]
[ext_resource type="Texture2D" uid="uid://cts1ly866wacc" path="res://assets/textures/settings-icon.png" id="3_655n8"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j0g6b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Select a level"
horizontal_alignment = 1

[node name="ReplaceWithSelection" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 466.62)
layout_mode = 2

[node name="LevelPicker" parent="VBoxContainer/ReplaceWithSelection" instance=ExtResource("2_u4u3e")]
layout_mode = 1

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ReturnBTN" type="Button" parent="VBoxContainer/HSplitContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 0
icon = ExtResource("2_rfsf6")
flat = true
expand_icon = true

[node name="SettingsBTN" type="Button" parent="VBoxContainer/HSplitContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
icon = ExtResource("3_655n8")
flat = true
expand_icon = true

[connection signal="pressed" from="VBoxContainer/HSplitContainer/ReturnBTN" to="." method="_on_return_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/SettingsBTN" to="." method="_on_settings_btn_pressed"]
